solve centering  on mobile

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -9,6 +9,7 @@
 
 .tech {
   margin: 10px;
+  flex-grow:1;
 }
 
 .user {
